--- a/public/index.html
+++ b/public/index.html
@@ -6,5 +6,19 @@
 
 	<body>
 		<p>Welcome to the chat app</p>
+	
+
+		<script src="/socket.io/socket.io.js"></script>
+		<script>
+			var socket = io()
+			socket.on('connect', function() {
+				console.log('connected to server');
+			});
+
+			socket.on('disconnect', function() {
+				console.log('disconnected to server');
+			});
+		</script>
+
 	</body>
 </html>
