--- a/public/index.html
+++ b/public/index.html
@@ -9,16 +9,7 @@
 	
 
 		<script src="/socket.io/socket.io.js"></script>
-		<script>
-			var socket = io()
-			socket.on('connect', function() {
-				console.log('connected to server');
-			});
-
-			socket.on('disconnect', function() {
-				console.log('disconnected to server');
-			});
-		</script>
+		<script src="/js/index.js"></script>
 
 	</body>
 </html>
