--- a/public/index.html
+++ b/public/index.html
@@ -14,7 +14,7 @@
 
 		<div class="chat__main">
 			<ol id="messages" class="chat__messages "></ol>
-			
+
 			<div class="chat__footer">
 				<form id="message-form">
 					<input name="message" type="text" placeholder="Message" autofocus autocomplete="off"/>
@@ -24,10 +24,11 @@
 			</div>
 		</div>
 
-		
+
 
 		<script src="/socket.io/socket.io.js"></script>
 		<script src="/js/libs/jquery-3.2.1.min.js"></script>
+		<script src="/js/libs/moment.js"></script>
 		<script src="/js/index.js"></script>
 
 	</body>
