--- a/public/index.html
+++ b/public/index.html
@@ -24,11 +24,36 @@
 			</div>
 		</div>
 
+<script id="message-template" type="text/template">
+		<li class="message">
+				<div class="message__title">
+						<h4>{{from}}</h4>
+						<span>{{createdAt}}</span>
+				</div>
+				<div class="message__body">
+							<p>{{text}}</p>
+				</div>
+		</li>
+</script>
+
+
+<script id="location-message-template" type="text/template">
+		<li class="message">
+				<div class="message__title">
+						<h4>{{from}}</h4>
+						<span>{{createdAt}}</span>
+				</div>
+				<div class="message__body">
+							<iframe width="300" height="170" frameborder="0" scrolling="no" marginheight="0" marginwidth="0" src="https://maps.google.com/maps?q={{latitude}},{{longitude}}&hl=es;z=14&amp;output=embed" > </iframe>
+				</div>
+		</li>
+</script>
 
 
 		<script src="/socket.io/socket.io.js"></script>
 		<script src="/js/libs/jquery-3.2.1.min.js"></script>
 		<script src="/js/libs/moment.js"></script>
+		<script src="/js/libs/mustache.js"></script>
 		<script src="/js/index.js"></script>
 
 	</body>
